# thirdcognitionpoc

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile_admin  Dockerfile_base  Dockerfile_dev  Dockerfile_timeline  LICENSE  README.md  auth.example.yaml  pyproject.toml  requirements.txt  start.sh  start_dev.sh  test_db  thirdcognition_db
.streamlit/: config.toml
poctimeline/: admin.py  chain.py  db_tables.py  db_tools.py  document_tools.py  file_repository  graph.py  prompts.py  timeline.py
poctimeline/admin/: 2_manage_files.py  Admin_Home.py  global_styles.py  index.py  login.py  sidebar.py
poctimeline/admin/pages/: 1_Upload.py  1_upload_files.py  2_Manage_Uploads.py  3_Browse_Concepts.py  3_Create_Journey.py  3_manage_journeys.py  4_Create_Journey.py  4_Manage_Journeys.py  5_Manage_Journeys.py  6_Manage_Organization.py  concepts_view.py  engage_with_rag.py  journey_assign.py  journey_edit.py  journey_edit_2.py  journey_edit_item.py  journey_simple_create.py  journey_simple_edit.py  journey_simple_manage.py  journey_simple_progress.py  journey_simple_template.py  journey_view_item.py  my_journeys.py  organization_manage.py  source_manage.py  source_upload.py
poctimeline/chains/: base.py  base_parser.py  base_validation.py  chain.py  init.py  init_chains.py  prompt_generator.py  prompts.py  rag_chain.py
poctimeline/chains/prompt_templates/: hr_rep-values.yaml  sales_rep-products.yaml
poctimeline/deprecated/admin/: 4_Create_Journey.py  5_Manage_Journeys.py
poctimeline/deprecated/lib/: journey_shared.py
poctimeline/graphs/: graph.py  process_text.py
poctimeline/lib/: chain.py  chat.py  db_tools.py  document_parse.py  document_tools.py  graph.py  helpers.py  journey_shared.py  load_env.py  prompts.py  reference_tools.py  streamlit_tools.py
poctimeline/lib/chains/: base.py  base_parser.py  base_validation.py  chain.py  (+4 more)
poctimeline/models/: journey.py  prompts.py  sqlite_tables.py  teaching.py
poctimeline/prompts/: actions.py  base.py  chat.py  formatters.py  hallucination.py  hyde.py  journey.py  journey_structured.py
poctimeline/timeline/: index.py  timeline.py
prompt_templates/: antler_coach.txt  hr_rep_values_bulk.txt  sales_rep_bulk.txt  sales_rep_instruct.txt  system_prompt_for_generating_taxonomy.txt  teach_bulk.txt
static/: global_styles.css  icon_files
(+49 files in other folders)
