[tool.poetry]
name = "poctimeline"
version = "0.1.0"
description = ""
authors = ["mathatan <mathatan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
azure-identity = "^1.17.1"
beautifulsoup4 = "^4.12.3"
chromadb = "^0.5.5"
flashrank = "^0.2.8"
fuzzywuzzy = "^0.18.0"
markdown = "^3.6"
playwright = "^1.46.0"
pydantic = "^2.8.2"
pymupdf = "^1.24.11"
python-levenshtein = "^0.25.1"
rapidocr-onnxruntime = "^1.3.24"
sentence-transformers = "^3.0.1"
sqlalchemy = "^2.0.31"
streamlit = "^1.37.0"
streamlit-authenticator = "^0.4.1"
streamlit-extras = "^0.5.0"
transformers = "^4.43.3"
watchdog = "^4.0.1"
langchain = "^0.3.3"
langchain-anthropic = "^0.2.3"
langchain-aws = "^0.2.2"
langchain-chroma = "^0.1.4"
langchain-cli = "^0.0.31"
langchain-community = "^0.3.2"
langchain-core = "^0.3.10"
langchain-experimental = "^0.3.2"
langchain-groq = "^0.2.0"
langchain-huggingface = "^0.1.0"
langchain-openai = "^0.2.2"
langgraph = "^0.2.38"
langserve = "^0.3.0"
langsmith = "^0.1.135"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
